--- a/styles/globals.css
+++ b/styles/globals.css
@@ -149,8 +149,8 @@
   height: 100%;
   width: 100%;
   position: absolute;
-  margin-top: -1.25rem;
-  margin-left: 1.5rem;
+  margin-top: 1rem;
+  margin-left: calc(1.75rem + 2px);
   border: 2px solid black;
   transform: translateZ(-1px);
   z-index: -1;
