--- a/styles/globals.css
+++ b/styles/globals.css
@@ -223,6 +223,91 @@
   /* right: 0; */
 }
 
+.rel {
+  position: relative;
+}
+.abs {
+  position: absolute;
+}
+.fish-scale {
+  left: calc(50% - 3rem);
+  transform: scale(0.4);
+}
+
+.ironfish-loader {
+  background-color: black;
+  clip-path: url(#fishclip);
+  width: 20rem;
+  height: 14rem;
+  display: flex;
+  margin: 0 auto;
+  animation: float 3.5s infinite ease;
+  transform-origin: 58% 42%;
+}
+.ironfish-loader::after {
+  background-color: var(--ifm-color-secondary);
+  height: 14rem;
+  width: 18rem;
+  content: '';
+  display: block;
+  animation: swipe 3.5s infinite ease-in;
+}
+
+.ironfish-loader.bw::after {
+  background-color: white;
+}
+
+.ironfish-loader.bg::after {
+  background-color: #ECECEC;
+}
+
+.ironfish-loader.bo::after {
+  background-color: #FFA542;
+}
+
+@keyframes float {
+  0% {
+    transform: scale(1);
+  }
+
+  25% {
+    transform: scale(1.25);
+  }
+
+  50% {
+    transform: scale(1.5);
+  }
+
+  75% {
+    transform: scale(1.25);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes swipe {
+  0% {
+    width: 0%;
+  }
+
+  25% {
+    width: 0%;
+  }
+
+  50% {
+    width: 100%;
+  }
+
+  75% {
+    width: 100%;
+  }
+
+  100% {
+    width: 0%;
+  }
+}
+
 html,
 body {
   padding: 0;
