--- a/components/Navbar/LoginButton.module.css
+++ b/components/Navbar/LoginButton.module.css
@@ -1,10 +1,10 @@
 .arrowed {
-  width: 100%;
-  min-width: 80vw;
-  margin: 4rem auto 0;
-  outline: 1px solid cyan;
-  position: absolute;
-  left: -40vw;
+  margin: 1.25rem auto 0;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
 }
 .arrowed::after,
 .arrowed::before {
@@ -16,25 +16,7 @@
   border: 0.5em solid transparent;
   border-bottom: 0.5rem solid black;
   top: -1rem;
-  left: calc(50% - 0.5rem);
-}
-@media screen and (min-width: 768px) {
-  .arrowed {
-    width: 7rem;
-    left: calc(-1rem + 2px);
-    top: -1rem;
-  }
-  .arrowed::after,
-  .arrowed::before {
-    display: inline-block;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .arrowed {
-    width: 10rem;
-    left: -0.25rem;
-    top: -1rem;
-  }
+  /* left: calc(50% - 0.5rem); */
 }
 
 .arrowed::before {
@@ -74,11 +56,39 @@
 .hitState {
   opacity: 0;
   background-color: lime;
-  width: 100%;
-  min-width: calc(100vw - 3rem);
   height: 3.25rem;
   display: flex;
   position: absolute;
-  left: calc(-50vw + 2rem);
-  top: -1.5rem;
+  top: 1.5rem;
+  width: 90%;
+  padding: 0 5%;
+}
+@media screen and (min-width: 768px) {
+  .hitState {
+    min-width: 2rem;
+  }
+  .arrowed {
+    width: 7rem;
+    left: calc(-1rem + 2px);
+    top: -2rem;
+  }
+  .arrowed::after,
+  .arrowed::before {
+    display: inline-block;
+    top: 1.875rem;
+  }
+  .arrowed::before {
+    top: calc(1.875rem + 1px);
+  }
+}
+@media screen and (min-width: 1024px) {
+  .arrowed {
+    width: 10rem;
+    left: -0.25rem;
+    top: -1rem;
+  }
+}
+.userButton {
+}
+.userButtonSpan {
 }
