--- a/components/Form/Select.module.css
+++ b/components/Form/Select.module.css
@@ -14,7 +14,7 @@
   width: 1rem;
   height: 2rem;
   text-align: center;
-  background-image: url(public/arrow_drop_down_black.png);
+  background-image: url(/arrow_drop_down_black.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-color: transparent;
@@ -22,5 +22,5 @@
 }
 
 .customSelectWrapper.disabled::after {
-  background-image: url(public/arrow_drop_down_disabled.png);
+  background-image: url(/arrow_drop_down_disabled.png);
 }
