--- a/components/user/EventRow.module.css
+++ b/components/user/EventRow.module.css
@@ -47,3 +47,15 @@
   opacity: 0 !important;
   display: none !important;
 }
+
+.truncatedHash {
+  direction: rtl;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 6rem;
+}
+@media screen and (min-width: 1024px) {
+  .truncatedHash {
+    max-width: 10rem;
+  }
+}
